# 3d_printer_old

./: README.md
Marlin/: Configuration.h  Configuration_adv.h
Marlin — копия/: Configuration.h
Screen/: font.zi  screen_3d.hmi
hps+fpga_marlin/project_alpha/: .cproject  .project  CMakeLists.txt  Makefile  addresses.c  addresses.cpp  addresses.h  configuration.h  endstop.c  endstop.cpp  endstop.h  gcode.c  gcode.cpp  gcode.h  heater.c  heater.cpp  heater.h  hps_0.h  main.c  main.cpp  main_old.cpp  printer  stepper.c  stepper.h  temp_11.h  temperature.c  temperature.cpp  temperature.h
hps+fpga_marlin/project_alpha/corexy/: corexy.ipynb
hps+fpga_marlin/project_alpha/for_tests/: Makefile  addresses.cpp  addresses.h  configuration.h  flags.cpp  flags.h  gcode.cpp  gcode.h  main.cpp  position.cpp  position.h  printer  root@192.168.7.1  temp_11.h
hps+fpga_marlin/project_alpha/for_tests/all/: printer
hps+fpga_marlin/project_alpha/include/: hps_0.h
hps+fpga_marlin/project_alpha/new_folder/: Makefile  addresses.cpp  addresses.h  main.cpp  printer
hps+fpga_marlin/project_alpha/new_folder/include/: hwlib.h
hps+fpga_marlin/project_alpha/new_folder/tests/1.1/: Makefile  main.cpp  printer1.1
hps+fpga_marlin/project_alpha/new_folder/tests/2.1/: Makefile  addresses.cpp  printer2.1
hps+fpga_marlin/project_alpha/new_folder/tests/2.2/: Makefile  addresses.cpp  main.cpp  printer2.2
hps+fpga_marlin/project_alpha/new_folder/tests/2.3/: Makefile
hps+fpga_marlin/project_alpha/new_folder/tests/all/: printer2.3
hps+fpga_marlin/project_alpha/v1/: Makefile  main  main.c
(+2244 files in other folders)
